[gd_scene load_steps=4 format=3 uid="uid://c6p7lm8311l77"]

[ext_resource type="Script" path="res://main.gd" id="1_rotfe"]
[ext_resource type="Script" path="res://texture.gd" id="2_pgcwx"]
[ext_resource type="Script" path="res://space.gd" id="3_6cg8o"]

[node name="Main" type="Node"]
script = ExtResource("1_rotfe")

[node name="Window" type="Window" parent="."]
title = "Experiment"
position = Vector2i(30, 50)
size = Vector2i(400, 400)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 522.0
offset_top = 8.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="TabContainer" type="TabContainer" parent="UI"]
layout_mode = 0
offset_left = -3.0
offset_top = -3.0
offset_right = 617.0
offset_bottom = 580.0
scale = Vector2(1.01242, 1.08982)
current_tab = 1

[node name="Texture" type="Panel" parent="UI/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_pgcwx")
metadata/_tab_index = 0

[node name="SDegrees" type="HSlider" parent="UI/TabContainer/Texture"]
layout_mode = 0
offset_left = 110.0
offset_top = 18.0
offset_right = 613.0
offset_bottom = 79.0

[node name="LDegrees" type="Label" parent="UI/TabContainer/Texture"]
layout_mode = 0
offset_left = 15.0
offset_top = 33.0
offset_right = 79.0
offset_bottom = 56.0
text = "Degrees"

[node name="SXWidth" type="HSlider" parent="UI/TabContainer/Texture"]
layout_mode = 0
offset_left = 110.0
offset_top = 84.0
offset_right = 613.0
offset_bottom = 145.0

[node name="LXWindth" type="Label" parent="UI/TabContainer/Texture"]
layout_mode = 0
offset_left = 15.0
offset_top = 99.0
offset_right = 79.0
offset_bottom = 122.0
text = "X Width"

[node name="SYWidth" type="HSlider" parent="UI/TabContainer/Texture"]
layout_mode = 0
offset_left = 110.0
offset_top = 155.0
offset_right = 613.0
offset_bottom = 216.0

[node name="LYWidth" type="Label" parent="UI/TabContainer/Texture"]
layout_mode = 0
offset_left = 15.0
offset_top = 170.0
offset_right = 79.0
offset_bottom = 193.0
text = "Y Width"

[node name="Load" type="Button" parent="UI/TabContainer/Texture"]
layout_mode = 0
offset_left = 33.0
offset_top = 225.0
offset_right = 41.0
offset_bottom = 233.0
text = "Load"

[node name="New" type="Button" parent="UI/TabContainer/Texture"]
layout_mode = 0
offset_left = 153.0
offset_top = 226.0
offset_right = 199.0
offset_bottom = 257.0
text = "New"

[node name="Save" type="Button" parent="UI/TabContainer/Texture"]
layout_mode = 0
offset_left = 94.0
offset_top = 226.0
offset_right = 138.0
offset_bottom = 257.0
text = "Save
"

[node name="Generate" type="Button" parent="UI/TabContainer/Texture"]
layout_mode = 0
offset_left = 211.0
offset_top = 227.0
offset_right = 291.0
offset_bottom = 258.0
text = "Generate
"

[node name="Space" type="Panel" parent="UI/TabContainer"]
layout_mode = 2
script = ExtResource("3_6cg8o")
metadata/_tab_index = 1

[node name="New" type="Button" parent="UI/TabContainer/Space"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "New"

[node name="Planet" type="Panel" parent="UI/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ScreenGrab" type="Button" parent="UI"]
layout_mode = 0
offset_left = -496.0
offset_top = 461.0
offset_right = -393.0
offset_bottom = 492.0
text = "Screen Grab"

[node name="SaveDialog" type="FileDialog" parent="."]
size = Vector2i(303, 500)
ok_button_text = "Save"
filters = PackedStringArray("*.png")

[node name="LoadDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(275, 180)
ok_button_text = "Open"
file_mode = 0

[connection signal="display" from="UI/TabContainer/Texture" to="." method="_on_texture_display"]
[connection signal="pressed" from="UI/TabContainer/Texture/New" to="UI/TabContainer/Texture" method="_on_new_pressed"]
[connection signal="pressed" from="UI/TabContainer/Texture/Generate" to="UI/TabContainer/Texture" method="_on_generate_pressed"]
[connection signal="display" from="UI/TabContainer/Space" to="." method="_on_space_display"]
[connection signal="pressed" from="UI/TabContainer/Space/New" to="UI/TabContainer/Space" method="_on_new_pressed"]
[connection signal="pressed" from="UI/ScreenGrab" to="." method="_on_screen_grab_pressed"]
